@@ -1,3 +1,8 @@
+Summary of important user-visible changes for netcdf 1.0.7:
+-------------------------------------------------------------------
+
+ ** apply patch from John Donoghue to allow cross-compilation (bug #44837)
+
 Summary of important user-visible changes for netcdf 1.0.6:
 -------------------------------------------------------------------
 
